--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "6oz",
+  "name": "bekkibrooker",
   "version": "0.0.1",
-  "description": "Just the right amount to start a complex web app",
-  "homepage": "https://github.com/6oz/6oz",
-  "main": "index.js",
-  "keywords": [
-    "css",
-    "rework"
-  ],
+  "description": "Hair stylist specialising in weddings",
+  "homepage": "https://github.com/lukebrooker/bekkibrooker",
+  "main": "index.html",
   "bugs": {
-    "url": "https://github.com/6oz/6oz/issues"
+    "url": "https://github.com/lukebrooker/bekkibrooker/issues"
   },
   "author": {
     "name": "Luke Brooker",
@@ -22,10 +18,23 @@
     "lib"
   ],
   "dependencies": {
-    "suitcss-base": "^0.7.0"
+    "headroom.js": "git://github.com/WickyNilliams/headroom.js",
+    "jquery": "^2.1.1",
+    "jquery-autosize": "^1.18.12",
+    "suit-utils-list": "^0.4.1",
+    "suitcss-base": "^0.7.0",
+    "suitcss-components-grid": "^2.0.1",
+    "suitcss-utils-align": "^0.2.1",
+    "suitcss-utils-display": "^0.4.1",
+    "suitcss-utils-layout": "^0.4.1",
+    "suitcss-utils-position": "^0.2.1",
+    "suitcss-utils-size": "^0.7.1",
+    "suitcss-utils-text": "^0.4.1"
   },
   "license": "MIT",
   "devDependencies": {
+    "browserify": "^5.11.1",
+    "browserify-shim": "^3.7.0",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "^0.0.8",
     "gulp-cache": "^0.1.3",
@@ -37,6 +46,8 @@
     "gulp-rename": "^1.2.0",
     "gulp-rework": "^0.4.0",
     "gulp-rimraf": "^0.1.0",
+    "gulp-shell": "^0.2.9",
+    "gulp-svg-sprites": "^1.0.2",
     "gulp-uglify": "^0.2.1",
     "gulp-webserver": "^0.4.0",
     "rework-calc": "^1.0.0",
@@ -45,6 +56,8 @@
     "rework-ie-limits": "^0.1.1",
     "rework-npm": "^1.0.0",
     "rework-suit-conformance": "^0.4.0",
-    "rework-vars": "^3.1.1"
+    "rework-vars": "^3.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
