Fix meta data, tweak icons, tweak design.

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Bekki Brooker
 email: hair@bekkibrooker.com
-tagline: "Brisbane Wedding Hair Stylist"
-description: "Hair Stylist"
+tagline: "Wedding Hair Stylist | Brisbane, Gold Coast and Sunshine Coast"
+description: "A specialist in bridal, formal and fashion hair styling with over 10 years experience. Servicing the Sunshine Coast, Brisbane, Gold Coast and beyond."
 baseurl: ""
 url: "http://bekkibrooker.com"
 
